second version of index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>Cancer Research Center</title>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is a Cancer Research Site by GHS</h1>
+<p>Copyright : Shourya Vyas</p>
 
 </body>
 </html>
